# fivetran-monitor

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.spark  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: seed_db.sql
src/airflow/dags/: alert_dag.py  fivetran_ingest_dag.py  ml_predict_dag.py  ml_train_dag.py  spark_feature_dag.py
src/alerts/: dispatcher.py  email_sender.py  ntfy_sender.py
src/ingestion/: fivetran_client.py  ingest.py
src/ml/: anomaly_detector.py  forecaster.py  predictor.py  trainer.py
src/spark/: feature_engineering.py
src/utils/: config.py  db.py  metrics.py  storage.py
tests/unit/: test_anomaly_detector.py  test_dispatcher.py
