[tool.poetry]
name = "fivetran-monitor"
version = "1.0.0"
description = "Production-grade Fivetran sync monitoring with Spark, Airflow, and ML"
authors = ["Your Name <you@yourcompany.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python            = "^3.11"
requests          = "^2.31.0"
python-dotenv     = "^1.0.0"
pydantic          = "^2.5.0"
pydantic-settings = "^2.1.0"
schedule          = "^1.2.1"
tenacity          = "^8.2.3"
pyspark           = "^3.5.0"
pandas            = "^2.1.0"
pyarrow           = "^14.0.0"
scikit-learn      = "^1.3.2"
prophet           = "^1.1.5"
joblib            = "^1.3.2"
numpy             = "^1.26.0"
boto3             = "^1.34.0"
sqlalchemy        = "^2.0.23"
psycopg2-binary   = "^2.9.9"
alembic           = "^1.13.0"
prometheus-client = "^0.19.0"
jinja2            = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest       = "^7.4.0"
pytest-cov   = "^4.1.0"
pytest-mock  = "^3.12.0"
black        = "^23.12.0"
ruff         = "^0.1.9"
pre-commit   = "^3.6.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=src --cov-report=term-missing"
